// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHeader with time column renders correctly 1`] = `
<tr
  class="kbnDocTableHeader"
  data-test-subj="docTableHeader"
>
  <th
    style="width: 24px;"
  />
  <th
    data-test-subj="docTableHeaderField"
  >
    <span
      class="kbnDocTableHeader__actions"
      data-test-subj="docTableHeader-time"
    >
      time
      <span
        class="euiToolTipAnchor"
      >
        <span
          aria-label="Primary time field."
          data-euiicon-type="clock"
          tabindex="0"
        />
      </span>
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Sort time descending"
          class="euiButtonIcon euiButtonIcon--primary euiButtonIcon--empty euiButtonIcon--xSmall"
          data-test-subj="docTableHeaderFieldSort_time"
          style="width: 12px; height: 12px;"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="sortUp"
          />
        </button>
      </span>
    </span>
  </th>
  <th
    data-test-subj="docTableHeaderField"
  >
    <span
      class="kbnDocTableHeader__actions"
      data-test-subj="docTableHeader-first"
    >
      first
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Remove first column"
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall kbnDocTableHeader__move"
          data-test-subj="docTableRemoveHeader-first"
          style="width: 12px; height: 12px;"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Move first column to the right"
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall kbnDocTableHeader__move"
          data-test-subj="docTableMoveRightHeader-first"
          style="width: 12px; height: 12px;"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="sortRight"
          />
        </button>
      </span>
    </span>
  </th>
  <th
    data-test-subj="docTableHeaderField"
  >
    <span
      class="kbnDocTableHeader__actions"
      data-test-subj="docTableHeader-middle"
    >
      middle
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Remove middle column"
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall kbnDocTableHeader__move"
          data-test-subj="docTableRemoveHeader-middle"
          style="width: 12px; height: 12px;"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Move middle column to the left"
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall kbnDocTableHeader__move"
          data-test-subj="docTableMoveLeftHeader-middle"
          style="width: 12px; height: 12px;"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="sortLeft"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Move middle column to the right"
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall kbnDocTableHeader__move"
          data-test-subj="docTableMoveRightHeader-middle"
          style="width: 12px; height: 12px;"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="sortRight"
          />
        </button>
      </span>
    </span>
  </th>
  <th
    data-test-subj="docTableHeaderField"
  >
    <span
      class="kbnDocTableHeader__actions"
      data-test-subj="docTableHeader-last"
    >
      last
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Remove last column"
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall kbnDocTableHeader__move"
          data-test-subj="docTableRemoveHeader-last"
          style="width: 12px; height: 12px;"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Move last column to the left"
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall kbnDocTableHeader__move"
          data-test-subj="docTableMoveLeftHeader-last"
          style="width: 12px; height: 12px;"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="sortLeft"
          />
        </button>
      </span>
    </span>
  </th>
</tr>
`;

exports[`TableHeader without time column renders correctly 1`] = `
<tr
  class="kbnDocTableHeader"
  data-test-subj="docTableHeader"
>
  <th
    style="width: 24px;"
  />
  <th
    data-test-subj="docTableHeaderField"
  >
    <span
      class="kbnDocTableHeader__actions"
      data-test-subj="docTableHeader-first"
    >
      first
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Remove first column"
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall kbnDocTableHeader__move"
          data-test-subj="docTableRemoveHeader-first"
          style="width: 12px; height: 12px;"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Move first column to the right"
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall kbnDocTableHeader__move"
          data-test-subj="docTableMoveRightHeader-first"
          style="width: 12px; height: 12px;"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="sortRight"
          />
        </button>
      </span>
    </span>
  </th>
  <th
    data-test-subj="docTableHeaderField"
  >
    <span
      class="kbnDocTableHeader__actions"
      data-test-subj="docTableHeader-middle"
    >
      middle
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Remove middle column"
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall kbnDocTableHeader__move"
          data-test-subj="docTableRemoveHeader-middle"
          style="width: 12px; height: 12px;"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Move middle column to the left"
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall kbnDocTableHeader__move"
          data-test-subj="docTableMoveLeftHeader-middle"
          style="width: 12px; height: 12px;"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="sortLeft"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Move middle column to the right"
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall kbnDocTableHeader__move"
          data-test-subj="docTableMoveRightHeader-middle"
          style="width: 12px; height: 12px;"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="sortRight"
          />
        </button>
      </span>
    </span>
  </th>
  <th
    data-test-subj="docTableHeaderField"
  >
    <span
      class="kbnDocTableHeader__actions"
      data-test-subj="docTableHeader-last"
    >
      last
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Remove last column"
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall kbnDocTableHeader__move"
          data-test-subj="docTableRemoveHeader-last"
          style="width: 12px; height: 12px;"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Move last column to the left"
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall kbnDocTableHeader__move"
          data-test-subj="docTableMoveLeftHeader-last"
          style="width: 12px; height: 12px;"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="sortLeft"
          />
        </button>
      </span>
    </span>
  </th>
</tr>
`;
